crates/reinhardt-core/macros/tests/ui/routes/fail/pre_validate_invalid_value.rs
//! Test: pre_validate must be a boolean

use reinhardt_macros::get;

#[get("/test", pre_validate = "yes")]
async fn handler() -> String {
	"Hello".to_string()
}

fn main() {}
